--- a/style.css
+++ b/style.css
@@ -89,6 +89,7 @@ label {
     border: 1px solid rgba(48, 48, 48, 0.3);
     border-radius: 5px;
     padding: 9px 0 8px 12px;
+    font-size: 16px;
 }
 
 .btn {
@@ -122,7 +123,7 @@ table td {
 }
 
 th, td {
-    padding: 10px 0 12px 15px;
+    padding: 12px 15px;
 }
 
 footer {
