--- a/style.css
+++ b/style.css
@@ -4,16 +4,19 @@
     padding: 0;
 }
 
+.container {
+    width: 100%;
+    max-width: 1440px;
+}
+
 body {
     font-family: 'Inter', sans-serif;
     color: #303030;
 }
 
 header {
-    height: 70px;
     background: #2965f1;
-    padding-top: 23px;
-    padding-bottom: 23px;
+    padding: 23px 150px;
 }
 
 header span {
@@ -25,8 +28,20 @@ header span {
 .main-section {
     background: #fafaff;
     min-height: 100vh;
-    padding-top: 60px;
-    padding-bottom: 60px;
+    padding: 60px 150px;
+    display: flex;
+    align-items: center;
+}
+
+.main-section .wrapper {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+
+}
+
+.text-wrapper {
+    max-width: 425px;
 }
 
 .main-title {
@@ -44,51 +59,96 @@ header span {
     max-width: 715px;
 }
 
-.section-title {
+.about-section {
     background: #fff;
-    padding: 100px 0;
+    padding: 100px 150px;
+}
+
+.about-section .wrapper {
+    display: flex;
+    flex-direction: column;
+    gap : 60px
 }
 
 .country-select {
+    border: 1px solid rgba(48, 48, 48, 0.3);
+    border-radius: 5px;
     width: 150px;
     font-weight: 400;
     font-size: 16px;
-    padding: 9px 87px 8px 12px;
+    padding: 8px 12px;
     appearance: none;
-    background: url("logo/Vector.svg") no-repeat center;
-    background-position-x: calc(100% - 12px);
+    background-image: url("logo/Vector.svg");
+    background-position: right 12px top 50%;
+    background-repeat: no-repeat;
 }
 
-h2 {
+select:hover,
+.text-field:hover {
+    border: 1px solid #2965f1;
+}
+
+.info-wrapper {
+    display: flex;
+}
+
+.section-title {
     font-weight: 700;
     font-size: 24px;
     margin-bottom: 25px;
 }
 
+.frameworks,
+.books {
+    min-width: 50%;
+}
+
+.frameworks-list, .books-list {
+    display: flex;
+    flex-direction: column;
+    gap: 16px;
+}
+
 .frameworks-list {
     list-style-image: url("logo/ULLI.svg");
     padding: 0 20px;
-}
-
-li {
     font-weight: 400;
     font-size: 16px;
 }
 
-.books-list {
-    padding: 0 20px;
+.skills-block {
+    display: flex;
+    flex-direction: column;
+    gap: 40px;
 }
 
-label {
+.skills {
+    display: flex;
+    flex-direction: column;
+    order: 2;
+    gap: 20px;
+}
+
+.books-list {
+    padding: 0 20px;
+    font-weight: 400;
+    font-size: 16px;
+}
+
+.label {
     font-weight: 400;
     font-size: 16px;
 }
 
 .text-field {
-    width: 330px;
     border: 1px solid rgba(48, 48, 48, 0.3);
     border-radius: 5px;
-    padding: 9px 0 8px 12px;
+    max-width: 330px;
+    width: 100%;
+    height: 36px;
+    background-color: rgba(255, 255, 255, 0);
+    padding: 8px 12px;
+    font-weight: 400;
     font-size: 16px;
 }
 
@@ -103,15 +163,21 @@ label {
     color: #fff;
 }
 
-.horizontal-line {
+.btn:hover {
+    background: rgba(41, 101, 241, 0.9);
+    cursor: pointer;
+}
+
+.line {
     margin: 60px 0;
 }
 
 table {
-    width: 300px;
-    height: 196px;
+    border: 1px solid #95a1bb;
     border-collapse: collapse;
+    font-weight: 400;
     font-size: 14px;
+    margin: 0 auto;
 }
 
 table th {
@@ -129,13 +195,18 @@ th, td {
 footer {
     background-color: rgba(163, 167, 255, 0.3);
     padding: 26px 0;
+    text-align: center;
 }
 
-.link {
+.footer-link {
     font-weight: 400;
     font-size: 14px;
     color: #2965f1;
     text-decoration: none;
+}
+
+.footer-link:hover {
+    text-decoration: underline;
 }
 
 a:visited {
